fix to blurry cs

--- a/arcanejs/src/components/landingPageLayout.scss
+++ b/arcanejs/src/components/landingPageLayout.scss
@@ -169,6 +169,7 @@ height: 1000px;
 }
 
 .mainSiteLogo {
+  -webkit-font-smoothing: subpixel-antialiased;
   text-decoration: none;
   font-size: 2.2rem;
   font-family: GothicCastle;
@@ -201,6 +202,7 @@ height: 1000px;
 // }
 
 .mainSiteLogo::before {
+  -webkit-font-smoothing: subpixel-antialiased;
   position: absolute;
   top: -0.5rem;
   padding-top: 0.5rem;
@@ -266,12 +268,14 @@ height: 1000px;
     }
   }
   .mainSiteLogo {
+    -webkit-font-smoothing: subpixel-antialiased;
     font-size: 2rem;
     z-index: 10;
     left:42%;
     top:25%;
   }
   .mainSiteLogo::before {
+    -webkit-font-smoothing: subpixel-antialiased;
     position: absolute;
     top: -0.5rem;
     padding-top: 0.5rem;
@@ -298,7 +302,7 @@ height: 1000px;
     content: "JS";
   }
   .centerLogo {
-    transform: scale(1.4) rotate(-5deg);
+    transform: scale(1.4) rotate(-5deg) !important;
     opacity:0.1;
     top: 10%;
     left:-5%;
@@ -312,7 +316,7 @@ height: 1000px;
     font-size:1.5rem;
     z-index: 10;
     top: 40%;
-
+    margin-top:3rem;
     left:20%;
 
   }
@@ -357,8 +361,10 @@ height: 1000px;
     z-index: 10;
     left:40%;
     top:25%;
+    -webkit-font-smoothing: subpixel-antialiased;
   }
   .mainSiteLogo::before {
+    -webkit-font-smoothing: subpixel-antialiased;
     position: absolute;
     top: -0.5rem;
     padding-top: 0.5rem;
@@ -385,7 +391,7 @@ height: 1000px;
     content: "JS";
   }
   .centerLogo {
-    transform: scale(1.8) rotate(-5deg);
+    transform: scale(1.8) rotate(-5deg) !important;
     opacity:0.1;
     top: 10%;
     left:-5%;
@@ -400,7 +406,7 @@ height: 1000px;
     z-index: 10;
     top: 20%;
     left:0%;
-    //max-width:95%;
+    margin-top:3rem;
     padding: 0.3rem 1rem;
   }
 }
